{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 327,
  "lineage": "bb774bde-046d-29a5-9f9b-dcb8b4c402f3",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d4c056a16f3ae150",
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:instance/i-0a4d1e78d73fbaa8d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-ec2-access-s3",
            "id": "i-0a4d1e78d73fbaa8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-ed25519-key",
            "launch_template": [
              {
                "id": "lt-03b3fc8646fcc4b9a",
                "name": "ec2-temp-web",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-031ab731d7f46185a"
              }
            ],
            "primary_network_interface_id": "eni-031ab731d7f46185a",
            "private_dns": "ip-10-2-0-239.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.239",
            "public_ip": "3.36.53.196",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c1685ec7f5de90fa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-059761b62d779f50a",
            "tags": {
              "Name": "ec2-web-1"
            },
            "tags_all": {
              "Name": "ec2-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f443f4737130bc4",
              "sg-067516c1e04a10a82",
              "sg-0b6822dfc3f0435fe",
              "sg-0df37d90f48807341"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "i-0a4d1e78d73fbaa8d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.keypair.aws_key_pair.ssh_public_key",
            "module.keypair.tls_private_key.ssh_public_key",
            "module.lt.aws_launch_template.web",
            "module.sg.aws_security_group.sg_map",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d4c056a16f3ae150",
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:instance/i-055be3fcf9a06d77a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "role-ec2-access-s3",
            "id": "i-055be3fcf9a06d77a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-ed25519-key",
            "launch_template": [
              {
                "id": "lt-03b3fc8646fcc4b9a",
                "name": "ec2-temp-web",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-067224c52127c067c"
              }
            ],
            "primary_network_interface_id": "eni-067224c52127c067c",
            "private_dns": "ip-10-2-1-179.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.179",
            "public_ip": "54.181.0.45",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0baad8983f51cb282",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d573b39b1f7a990c",
            "tags": {
              "Name": "ec2-web-2"
            },
            "tags_all": {
              "Name": "ec2-web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f443f4737130bc4",
              "sg-067516c1e04a10a82",
              "sg-0b6822dfc3f0435fe",
              "sg-0df37d90f48807341"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "i-055be3fcf9a06d77a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.keypair.aws_key_pair.ssh_public_key",
            "module.keypair.tls_private_key.ssh_public_key",
            "module.lt.aws_launch_template.web",
            "module.sg.aws_security_group.sg_map",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cache",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0843f4adce3220207",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0843f4adce3220207",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fw-cache",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-cache"
            },
            "tags_all": {
              "Name": "fw-cache"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0843f4adce3220207",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0518da3b50d46436e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0518da3b50d46436e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fw-db",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-db"
            },
            "tags_all": {
              "Name": "fw-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0518da3b50d46436e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "icmp",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-01f443f4737130bc4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01f443f4737130bc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fw-icmp",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-icmp"
            },
            "tags_all": {
              "Name": "fw-icmp"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-01f443f4737130bc4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "lb",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-05a679f33743921b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-05a679f33743921b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fw-lb",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-lb"
            },
            "tags_all": {
              "Name": "fw-lb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-05a679f33743921b1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "out",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0b6822dfc3f0435fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6822dfc3f0435fe",
            "ingress": [],
            "name": "fw-out",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-out"
            },
            "tags_all": {
              "Name": "fw-out"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0b6822dfc3f0435fe",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "remote",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0df37d90f48807341",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0df37d90f48807341",
            "ingress": [
              {
                "cidr_blocks": [
                  "183.98.32.210/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fw-remote",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-remote"
            },
            "tags_all": {
              "Name": "fw-remote"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0df37d90f48807341",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-067516c1e04a10a82",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-067516c1e04a10a82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "fw-web",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-web"
            },
            "tags_all": {
              "Name": "fw-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-067516c1e04a10a82",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd",
            "arn_suffix": "targetgroup/tg-webserver/71b60616a083f2dd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-webserver",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tg",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd,i-0a4d1e78d73fbaa8d,80",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd",
            "target_id": "i-0a4d1e78d73fbaa8d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd",
            "target_id": "i-0a4d1e78d73fbaa8d"
          },
          "dependencies": [
            "module.ec2.aws_instance.webs",
            "module.keypair.aws_key_pair.ssh_public_key",
            "module.keypair.tls_private_key.ssh_public_key",
            "module.lt.aws_launch_template.web",
            "module.sg.aws_security_group.sg_map",
            "module.tg.aws_lb_target_group.web",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd,i-055be3fcf9a06d77a,80",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd",
            "target_id": "i-055be3fcf9a06d77a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:511874874257:targetgroup/tg-webserver/71b60616a083f2dd",
            "target_id": "i-055be3fcf9a06d77a"
          },
          "dependencies": [
            "module.ec2.aws_instance.webs",
            "module.keypair.aws_key_pair.ssh_public_key",
            "module.keypair.tls_private_key.ssh_public_key",
            "module.lt.aws_launch_template.web",
            "module.sg.aws_security_group.sg_map",
            "module.tg.aws_lb_target_group.web",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:internet-gateway/igw-03e0c152e01daa697",
            "id": "igw-03e0c152e01daa697",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-igw-main"
            },
            "tags_all": {
              "Name": "seoul-igw-main"
            },
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "igw-03e0c152e01daa697",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-0cc000235fa65a2a0",
            "id": "rtb-0cc000235fa65a2a0",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e0c152e01daa697",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-route-public"
            },
            "tags_all": {
              "Name": "seoul-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-0cc000235fa65a2a0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "without_nat_privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-08eac417d36410e05",
            "id": "rtb-08eac417d36410e05",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-1"
            },
            "tags_all": {
              "Name": "seoul-route-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-08eac417d36410e05",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-056bd6bf2d146efad",
            "id": "rtb-056bd6bf2d146efad",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-2"
            },
            "tags_all": {
              "Name": "seoul-route-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-056bd6bf2d146efad",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058b8490296624258",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08eac417d36410e05",
            "subnet_id": "subnet-0572a5291a62634a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-058b8490296624258",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ips",
            "module.vpc.aws_nat_gateway.private_nat_gws",
            "module.vpc.aws_route_table.with_nat_privates",
            "module.vpc.aws_route_table.without_nat_privates",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0806f83c14b2c67fe",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-056bd6bf2d146efad",
            "subnet_id": "subnet-0e45fe32f79388c51"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0806f83c14b2c67fe",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_ips",
            "module.vpc.aws_nat_gateway.private_nat_gws",
            "module.vpc.aws_route_table.with_nat_privates",
            "module.vpc.aws_route_table.without_nat_privates",
            "module.vpc.aws_subnet.privates",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baf7809b5d4c7dae",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0cc000235fa65a2a0",
            "subnet_id": "subnet-059761b62d779f50a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0baf7809b5d4c7dae",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dc815c8695965ad",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0cc000235fa65a2a0",
            "subnet_id": "subnet-0d573b39b1f7a990c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-01dc815c8695965ad",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publics",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0572a5291a62634a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0572a5291a62634a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-1"
            },
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0572a5291a62634a1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0e45fe32f79388c51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e45fe32f79388c51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-2"
            },
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0e45fe32f79388c51",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-059761b62d779f50a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059761b62d779f50a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-1"
            },
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-059761b62d779f50a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0d573b39b1f7a990c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d573b39b1f7a990c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-2"
            },
            "vpc_id": "vpc-05b56def2e5823990"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0d573b39b1f7a990c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:vpc/vpc-05b56def2e5823990",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-09346906f57aa5ad9",
            "default_route_table_id": "rtb-01f95b525f814846b",
            "default_security_group_id": "sg-007c3d8aaa23d18a6",
            "dhcp_options_id": "dopt-08f1e1c8c978b36fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05b56def2e5823990",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f95b525f814846b",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-vpc-main"
            },
            "tags_all": {
              "Name": "seoul-vpc-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "vpc-05b56def2e5823990",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}